--- a/app/src/main/res/layout/layout_bad_network.xml
+++ b/app/src/main/res/layout/layout_bad_network.xml
@@ -16,7 +16,7 @@
         android:textSize="30sp" />
 
     <Button
-        android:id="@+id/action"
+        android:id="@+id/action_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
